# MapReduce-on-R-Tree

./: CMakeLists.txt  README.md  RtreeTest.cpp
MapReduce/: job.h  master.h  worker.h
Rtree/: RTree.h  config.h
Rtree_on_disk/: DiskRTreeTest.cpp  Rtree.h  bufferManager.h  config.h  diskManager.h  main.cpp
data/: balance.txt  data2.txt  tree.txt
